NIHVIVO-2267 Fix path to image on contact form confirmation page. Rename vivo-basic site_icons directory to align with images directory in wilma.

--- a/themes/vivo-basic/css/individual.css
+++ b/themes/vivo-basic/css/individual.css
@@ -20,11 +20,11 @@
 }
 
 #personWrap #contentwrap {
-/*  background: #fff url(../site_icons/grouping/bg_page_person.gif) no-repeat right top;*/
+/*  background: #fff url(../images/grouping/bg_page_person.gif) no-repeat right top;*/
 }
 
 #personWrap {
-/*  background: url(../site_icons/grouping/bg_innerwrap_person.gif) repeat-y right top;*/
+/*  background: url(../images/grouping/bg_innerwrap_person.gif) repeat-y right top;*/
     padding-top: 20px;
 /*    margin-top: 25px;*/
     clear: both;
@@ -50,7 +50,7 @@
 }
 
 #deptWrap {
-	background: url(../site_icons/grouping/bg_innerwrap_person.gif) repeat-y right top;
+	background: url(../images/grouping/bg_innerwrap_person.gif) repeat-y right top;
     padding-top: 26px;
     clear: both;
 }
@@ -182,7 +182,7 @@ img.screenshot {
     padding: 0 0 0 12px;
     font-size: 1.08em;
     color: #fff;
-    background: url(../site_icons/grouping/h3_tab_left.gif) left top no-repeat;
+    background: url(../images/grouping/h3_tab_left.gif) left top no-repeat;
     border: 0;
 }
 
@@ -191,12 +191,12 @@ img.screenshot {
     display: inline;
     height: 19px;
     padding: 5px 16px 0 0;
-    background: url(../site_icons/grouping/h3_tab_right.gif) right top no-repeat;
+    background: url(../images/grouping/h3_tab_right.gif) right top no-repeat;
 }
 
 #personWrap div.propsCategory {
     clear: left;
-    background: #fff url(../site_icons/grouping/bg_propsCategory.gif) right top no-repeat;
+    background: #fff url(../images/grouping/bg_propsCategory.gif) right top no-repeat;
 /*    border-left: 1px solid #d9d9d9;*/
     border-left: 1px solid #dedede;
 /*    border-bottom: 1px solid #d9d9d9;*/
@@ -209,7 +209,7 @@ img.screenshot {
     clear: left;
     margin: 0;
     padding: 8px 16px;
-/*    background: url(../site_icons/grouping/bg_propsWrap.gif) right top no-repeat;*/
+/*    background: url(../images/grouping/bg_propsWrap.gif) right top no-repeat;*/
 /*    border-top: 1px solid transparent;*/
 /*    border-right: 1px solid transparent;*/
 /*    background: #f7f7f7;*/
@@ -361,12 +361,12 @@ ul.properties h5.collate {
     border: 0;
     color: #fff;
 /*    background: #6d8e80;*/
-    background: #baa280 url(../site_icons/grouping/bg_propGroupNav-active.gif) top right repeat-y;
+    background: #baa280 url(../images/grouping/bg_propGroupNav-active.gif) top right repeat-y;
 }
 
 #personWrap #dashboard #propGroupNav h2 a.inactive {
     color: #b4bfba;
-    background: #baa280 url(../site_icons/grouping/bg_propGroupNav-inactive.gif) top right repeat-y;
+    background: #baa280 url(../images/grouping/bg_propGroupNav-inactive.gif) top right repeat-y;
 }
 
 #personWrap #dashboard #propGroupNav h2 a:hover {
@@ -384,7 +384,7 @@ ul.properties h5.collate {
     margin-left: 14px;
     margin-bottom: 2em;
     margin-top: 2em;
-    background: url(../site_icons/contactinfo.gif) left center no-repeat;
+    background: url(../images/contactinfo.gif) left center no-repeat;
     font-weight: bold;
     display: block;
 }
@@ -546,7 +546,7 @@ a.addNewButton {
     border: 1px solid #5394c3;
     padding: 6px 16px;
     line-height: 3em;
-    background: url(../site_icons/grouping/bg_links_addnew.gif) center center repeat-x;*/
+    background: url(../images/grouping/bg_links_addnew.gif) center center repeat-x;*/
 }
 
 a.addNewButton button {
@@ -598,7 +598,7 @@ a.backToTop:visited {
 }
 
 #personWrap div.propsCategory div.highlighted {
-/*	background: #faf8f3 url(../site_icons/grouping/bg_propsItem_highlighted.gif) left top repeat-y;*/
+/*	background: #faf8f3 url(../images/grouping/bg_propsItem_highlighted.gif) left top repeat-y;*/
 	border-top-color: #faf8f3;
 /*	border-top-color: #F0EDE4;*/
 	border-bottom-color: #faf8f3;
